--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,13 @@
     "version": 2,
     "builds": [
         {
+            "env":{
+                "MONGODB_URI": "mongodb+srv://maiyalikhil:s1IAOJjpN83wAo2g@hda.escuj.mongodb.net/?retryWrites=true&w=majority&appName=hda",
+                "JWT_SECRET": "your_super_secret_jwt_key_2024",
+                "ADMIN_CODE": "ADMIN123",
+                "AGENT_CODE": "AGENT123",
+                "CORS_ORIGIN": "http://localhost:5173"
+            },
             "src": "server.js",
             "use": "@vercel/node"
         }
@@ -13,10 +20,10 @@
         }
     ],
     "env": {
-        "MONGODB_URI": "@mongodb_uri",
-        "JWT_SECRET": "@jwt_secret",
-        "ADMIN_CODE": "@admin_code",
-        "AGENT_CODE": "@agent_code",
-        "CORS_ORIGIN": "@cors_origin"
+        "MONGODB_URI": "mongodb+srv://maiyalikhil:s1IAOJjpN83wAo2g@hda.escuj.mongodb.net/?retryWrites=true&w=majority&appName=hda",
+        "JWT_SECRET": "your_super_secret_jwt_key_2024",
+        "ADMIN_CODE": "ADMIN123",
+        "AGENT_CODE": "AGENT123",
+        "CORS_ORIGIN": "http://localhost:5173"
     }
 } 
